<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.lavnok.yuj.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_videos"
        android:name="com.lavnok.yuj.ui.videos.VideosFragment"
        android:label="@string/title_videos"
        tools:layout="@layout/fragment_videos" />

    <fragment
        android:id="@+id/navigation_batches"
        android:name="com.lavnok.yuj.ui.batches.BatchesFragment"
        android:label="@string/title_batches"
        tools:layout="@layout/fragment_batches" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.lavnok.yuj.ui.user.UserFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_user" />

</navigation>